// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketList /> shapshots should not throw if items is undefined 1`] = `
<div
  className="ticketList"
>
  
</div>
`;

exports[`<TicketList /> shapshots should render only the necessary items 1`] = `
<div
  className="ticketList"
>
  <react-virtualized-list
    height={618}
    rowCount={1000}
    rowHeight={105}
    rowRenderer={[Function]}
    width={1024}
  >
    <div
      className="row"
      dir="ltr"
      style={Object {}}
    />
    <div
      className="row"
      dir="ltr"
      style={Object {}}
    />
    <div
      className="row"
      dir="ltr"
      style={Object {}}
    />
    <div
      className="row"
      dir="ltr"
      style={Object {}}
    />
    <div
      className="row"
      dir="ltr"
      style={Object {}}
    />
  </react-virtualized-list>
</div>
`;

exports[`<TicketList /> shapshots should render the empty content if no items 1`] = `
<div
  className="ticketList"
>
  I am empty
</div>
`;
